@@ -5,6 +5,8 @@ version 2.10.4:
 	* Disable periodic WHO timer.  IRC channel user lists will no
 	  longer automatically display away status, but libpurple will be
 	  much kinder to the network.
+	* Print unknown numerics to channel windows if we can associate
+	  them.  Thanks to Marien Zwart. (#15090)
 
 version 2.10.3 (03/26/2012):
 	MSN:
